.circleci/template.yml
Parameters:
  EnvironmentName:
    Description: Environment name?
    Type: String
    Default: Course3Exercise3
  VpcID:
    Description: VPC ID
    Type: String
    Default: vpc-0689b8e3d276ae985
  SubnetID:
    Description: subnet for the instance
    Type: String
    Default: subnet-0f96bedcbd159d4af
  ImageID:
    Description: AMI ID
    Type: String
    Default: ami-052efd3df9dad4825

Resources:
  WebServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: security group for web servers
      GroupName: WebSG
      SecurityGroupIngress: 
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: allow access incoming traffic
        FromPort: 80
        ToPort: 80
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: allow access via ssh terminal
        FromPort: 22  
        ToPort: 22  
      SecurityGroupEgress: 
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0
        Description: permit all outgoing traffic from all ports
        FromPort: 0
        ToPort: 65535
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} web servers security group
      VpcId: vpc-0689b8e3d276ae985

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-052efd3df9dad4825
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - !Ref WebServerSG
          SubnetId: subnet-0f96bedcbd159d4af
      KeyName: course3
